# physim

./: .gitignore  Buffer.h  CMakeLists.txt  Camera.h  Layer.h  Model.cpp  Model.h  ParticleSystem.h  Shader.cpp  Shader.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h  imgui.ini  main.cpp
editor/: AssetPanel.cpp  AssetPanel.h  CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  EditorSettings.cpp  EditorSettings.h  GizmoMode.h  InspectorPanel.cpp  InspectorPanel.h  LauncherPanel.cpp  LauncherPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  main.cpp
engine/: Application.cpp  Application.h  CMakeLists.txt  EditorContext.h  Event.h  EventBus.cpp  EventBus.h  Layer.h  LayerStack.cpp  LayerStack.h  Model.h  PhysicsWorld.h  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h  main.cpp
engine/AssetManager/: Asset.h  AssetManagerBase.h  AssetMetadata.h  EditorAssetManager.cpp  EditorAssetManager.h
engine/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
engine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneController.cpp  SceneController.h  SceneSerializer.cpp  SceneSerializer.h
engine/asset/: Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h
engine/core/: Application.cpp  Application.h  Event.h  Input.cpp  Input.h  Layer.h  LayerStack.h  RenderLayer.cpp  RenderLayer.h  Timer.cpp  UUID.h  Window.cpp  Window.h
engine/physics/: AABB.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.h
engine/project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
engine/render/: Buffer.cpp  Camera.cpp  Camera.h  LightType.h  MeshPrimitive.h  Model.cpp  Model.h  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.h  VertexArray.cpp
engine/shaders/: default.vert  depth.vert  forward.frag  forward.vert  gizmo.frag  gizmo.vert  grid.frag  grid.vert  normals.frag  normals.geom  normals.vert  outline.frag  outline.vert
engine/utils/: FileDialog.cpp  FileDialog.h
libs/stb/: stb_image.h
shaders/: default.frag  default.vert  depth.frag  depth.vert  particle.frag  particle.vert  particle_billboard.frag  particle_billboard.vert
